--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
     <span id="text">Абракадабра!</span>
     <br /><br />
 
-
     <script src="./js/task-1.js" type="module"></script>
     <script src="./js/task-2.js" type="module"></script>
     <script src="./js/task-3.js" type="module"></script>
@@ -82,5 +81,6 @@
     <script src="./js/task-5.js" type="module"></script>
     <script src="./js/task-6.js" type="module"></script>
     <script src="./js/task-7.js" type="module"></script>
+    <script src="./js/task-8.js" type="module"></script>
   </body>
 </html>
