--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
     <span id="text">Абракадабра!</span>
     <br /><br />
 
+    <div id="controls">
+      <input type="number" min="0" max="100" step="1" />
+      <button type="button" data-action="render">Создать</button>
+      <button type="button" data-action="destroy">Очистить</button>
+    </div>
+
+    <div id="boxes"></div>
+
     <script src="./js/task-1.js" type="module"></script>
     <script src="./js/task-2.js" type="module"></script>
     <script src="./js/task-3.js" type="module"></script>
@@ -81,6 +89,7 @@
     <script src="./js/task-5.js" type="module"></script>
     <script src="./js/task-6.js" type="module"></script>
     <script src="./js/task-7.js" type="module"></script>
-    <script src="./js/task-8.js" type="module"></script>
+    <!-- <script src="./js/task-8.js" type="module"></script> -->
+    <script src="./js/task-8-1.js" type="module"></script>
   </body>
 </html>
